// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FoodstuffsListService snapshot tests createList 1`] = `
Object {
  "listId": "uuid",
  "name": "orange",
  "products": Array [],
}
`;

exports[`FoodstuffsListService snapshot tests deleteList 1`] = `
Object {
  "lists": Array [
    Object {
      "listId": "uuid",
      "name": "My Favourites",
      "products": undefined,
    },
    Object {
      "listId": "uuid",
      "name": "broccoli",
      "products": undefined,
    },
  ],
}
`;

exports[`FoodstuffsListService snapshot tests getList 1`] = `
Object {
  "listId": "uuid",
  "name": "blueberry",
  "originStatement": "Product origins may have changed since adding them to your list.",
  "products": Array [
    Object {
      "brand": "Ploughmans Bakery",
      "category": "Bakery",
      "imageUrl": "https://a.fsimg.co.nz/product/retail/fan/image/100x100/5011078.png",
      "liquor": false,
      "name": "Soy & Canterbury Linseed Bread",
      "price": 0,
      "productId": "5011078-EA-000",
      "promoBadgeImageTitle": "Extra Low",
      "promotionId": "124782404",
      "quantity": 1,
      "rangedInStore": true,
      "rangedOnline": true,
      "restricted": false,
      "saleTypes": Array [
        Object {
          "minUnit": 1,
          "stepSize": 1,
          "type": "UNITS",
          "unit": "ea",
        },
      ],
      "sale_type": "UNITS",
      "tobacco": false,
      "trolleyBadgeImageUrl": "PNS/6000-Extra_Low.svg",
      "weight": "",
      "weightUnitOfMeasure": "",
    },
    Object {
      "category": "Fruit & Vegetables",
      "imageUrl": "https://a.fsimg.co.nz/product/retail/fan/image/100x100/5039965.png",
      "liquor": false,
      "name": "Carrots",
      "price": 0,
      "productId": "5039965-KGM-000",
      "promoBadgeImageTitle": "Everyday Low",
      "quantity": 500,
      "rangedInStore": true,
      "rangedOnline": true,
      "restricted": false,
      "saleTypes": Array [
        Object {
          "minUnit": 200,
          "stepSize": 100,
          "type": "WEIGHT",
          "unit": "g",
        },
      ],
      "sale_type": "WEIGHT",
      "tobacco": false,
      "trolleyBadgeImageUrl": "PNS/Everyday_Low.svg",
      "weight": "150",
      "weightUnitOfMeasure": "g",
    },
  ],
}
`;

exports[`FoodstuffsListService snapshot tests getLists 1`] = `
Array [
  Object {
    "listId": "uuid",
    "name": "My Favourites",
    "products": Array [],
  },
]
`;

exports[`FoodstuffsListService snapshot tests updateList 1`] = `
Object {
  "listId": "uuid",
  "products": Array [
    Object {
      "category": "Bakery",
      "imageUrl": "https://a.fsimg.co.nz/product/retail/fan/image/100x100/5011078.png",
      "liquor": false,
      "name": "Soy & Canterbury Linseed Bread",
      "price": 0,
      "productId": "5011078-EA-000",
      "quantity": 1,
      "rangedInStore": true,
      "rangedOnline": true,
      "restricted": false,
      "saleTypes": Array [
        Object {
          "minUnit": 1,
          "stepSize": 1,
          "type": "UNITS",
          "unit": "ea",
        },
      ],
      "sale_type": "UNITS",
      "tobacco": false,
      "weight": "",
      "weightUnitOfMeasure": "",
    },
    Object {
      "category": "Fruit & Vegetables",
      "imageUrl": "https://a.fsimg.co.nz/product/retail/fan/image/100x100/5039965.png",
      "liquor": false,
      "name": "Carrots",
      "price": 0,
      "productId": "5039965-KGM-000",
      "quantity": 500,
      "rangedInStore": true,
      "rangedOnline": true,
      "restricted": false,
      "saleTypes": Array [
        Object {
          "minUnit": 200,
          "stepSize": 100,
          "type": "WEIGHT",
          "unit": "g",
        },
      ],
      "sale_type": "WEIGHT",
      "tobacco": false,
      "weight": "150",
      "weightUnitOfMeasure": "g",
    },
    Object {
      "category": "Dairy & Eggs",
      "imageUrl": "https://a.fsimg.co.nz/product/retail/fan/image/100x100/5201479.png",
      "liquor": false,
      "name": "Standard Milk",
      "price": 0,
      "productId": "5201479-EA-000",
      "quantity": 1,
      "rangedInStore": true,
      "rangedOnline": true,
      "restricted": false,
      "saleTypes": Array [
        Object {
          "minUnit": 1,
          "stepSize": 1,
          "type": "UNITS",
          "unit": "ea",
        },
      ],
      "sale_type": "UNITS",
      "tobacco": false,
      "weight": "",
      "weightUnitOfMeasure": "",
    },
  ],
}
`;

exports[`FoodstuffsListService unit tests createList 1`] = `
Object {
  "listId": "uuid",
  "name": "orange",
  "products": Array [],
}
`;

exports[`FoodstuffsListService unit tests deleteList 1`] = `
Object {
  "lists": Array [
    Object {
      "listId": "uuid",
      "name": "My Favourites",
      "products": undefined,
    },
    Object {
      "listId": "uuid",
      "name": "broccoli",
      "products": undefined,
    },
  ],
}
`;

exports[`FoodstuffsListService unit tests getList 1`] = `
Object {
  "listId": "uuid",
  "name": "blueberry",
  "originStatement": "Product origins may have changed since adding them to your list.",
  "products": Array [
    Object {
      "brand": "Ploughmans Bakery",
      "category": "Bakery",
      "imageUrl": "https://a.fsimg.co.nz/product/retail/fan/image/100x100/5011078.png",
      "liquor": false,
      "name": "Soy & Canterbury Linseed Bread",
      "price": 0,
      "productId": "5011078-EA-000",
      "promoBadgeImageTitle": "Extra Low",
      "promotionId": "124782404",
      "quantity": 1,
      "rangedInStore": true,
      "rangedOnline": true,
      "restricted": false,
      "saleTypes": Array [
        Object {
          "minUnit": 1,
          "stepSize": 1,
          "type": "UNITS",
          "unit": "ea",
        },
      ],
      "sale_type": "UNITS",
      "tobacco": false,
      "trolleyBadgeImageUrl": "PNS/6000-Extra_Low.svg",
      "weight": "",
      "weightUnitOfMeasure": "",
    },
    Object {
      "category": "Fruit & Vegetables",
      "imageUrl": "https://a.fsimg.co.nz/product/retail/fan/image/100x100/5039965.png",
      "liquor": false,
      "name": "Carrots",
      "price": 0,
      "productId": "5039965-KGM-000",
      "promoBadgeImageTitle": "Everyday Low",
      "quantity": 500,
      "rangedInStore": true,
      "rangedOnline": true,
      "restricted": false,
      "saleTypes": Array [
        Object {
          "minUnit": 200,
          "stepSize": 100,
          "type": "WEIGHT",
          "unit": "g",
        },
      ],
      "sale_type": "WEIGHT",
      "tobacco": false,
      "trolleyBadgeImageUrl": "PNS/Everyday_Low.svg",
      "weight": "150",
      "weightUnitOfMeasure": "g",
    },
  ],
}
`;

exports[`FoodstuffsListService unit tests getLists 1`] = `
Array [
  Object {
    "listId": "uuid",
    "name": "My Favourites",
    "products": Array [],
  },
]
`;

exports[`FoodstuffsListService unit tests updateList 1`] = `
Object {
  "listId": "uuid",
  "products": Array [
    Object {
      "category": "Bakery",
      "imageUrl": "https://a.fsimg.co.nz/product/retail/fan/image/100x100/5011078.png",
      "liquor": false,
      "name": "Soy & Canterbury Linseed Bread",
      "price": 0,
      "productId": "5011078-EA-000",
      "quantity": 1,
      "rangedInStore": true,
      "rangedOnline": true,
      "restricted": false,
      "saleTypes": Array [
        Object {
          "minUnit": 1,
          "stepSize": 1,
          "type": "UNITS",
          "unit": "ea",
        },
      ],
      "sale_type": "UNITS",
      "tobacco": false,
      "weight": "",
      "weightUnitOfMeasure": "",
    },
    Object {
      "category": "Fruit & Vegetables",
      "imageUrl": "https://a.fsimg.co.nz/product/retail/fan/image/100x100/5039965.png",
      "liquor": false,
      "name": "Carrots",
      "price": 0,
      "productId": "5039965-KGM-000",
      "quantity": 500,
      "rangedInStore": true,
      "rangedOnline": true,
      "restricted": false,
      "saleTypes": Array [
        Object {
          "minUnit": 200,
          "stepSize": 100,
          "type": "WEIGHT",
          "unit": "g",
        },
      ],
      "sale_type": "WEIGHT",
      "tobacco": false,
      "weight": "150",
      "weightUnitOfMeasure": "g",
    },
    Object {
      "category": "Dairy & Eggs",
      "imageUrl": "https://a.fsimg.co.nz/product/retail/fan/image/100x100/5201479.png",
      "liquor": false,
      "name": "Standard Milk",
      "price": 0,
      "productId": "5201479-EA-000",
      "quantity": 1,
      "rangedInStore": true,
      "rangedOnline": true,
      "restricted": false,
      "saleTypes": Array [
        Object {
          "minUnit": 1,
          "stepSize": 1,
          "type": "UNITS",
          "unit": "ea",
        },
      ],
      "sale_type": "UNITS",
      "tobacco": false,
      "weight": "",
      "weightUnitOfMeasure": "",
    },
  ],
}
`;
